testdata/baselines/reference/submodule/conformance/callbackTag2.errors.txt
cb.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(8,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(13,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(19,14): error TS2339: Property 'id' does not exist on type 'SharedClass'.
cb.js(22,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(25,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(31,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(32,12): error TS8010: Type annotations can only be used in TypeScript files.
cb.js(33,12): error TS8010: Type annotations can only be used in TypeScript files.


==== cb.js (9 errors) ====
    /** @template T
     * @callback Id
     * @param {T} t
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @returns {T} Maybe just return 120 and cast it?
     */
    var x = 1
    
    /** @type {Id<string>} I actually wanted to write `const "120"` */
               ~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var one_twenty = s => "120";
    
    /** @template S
     * @callback SharedId
     * @param {S} ego
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @return {S}
     */
    class SharedClass {
        constructor() {
            /** @type {SharedId<S>} */
            this.id;
                 ~~
!!! error TS2339: Property 'id' does not exist on type 'SharedClass'.
        }
    }
    /** @type {SharedId<number>} */
               ~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var outside = n => n + 1;
    
    /** @type {Final<{ fantasy }, { heroes }>} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var noreturn = (barts, tidus, noctis) => "cecil"
    
    /**
     * @template V,X
     * @callback Final
     * @param {V} barts - "Barts"
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {X} tidus - Titus
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {X & V} noctis - "Prince Noctis Lucius Caelum"
               ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @return {"cecil" | "zidane"}
     */
    